fixed integrations spacing

--- a/static/css/sidebar/style.css
+++ b/static/css/sidebar/style.css
@@ -19,8 +19,9 @@
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px !important;
+    line-height: 170%;
     margin: 0px;
+    padding: 0;
     color: #495567;
 }
 
